# E-AutoCheck

./: .clangd  .env  .gitignore  .qmlls.ini  AGENTS.md  CMakeLists.txt  README.md  justfile
.cursor-server/: plan.md
.cursor/plans/: pilecard_refactor.plan.md
config/: base.yaml
doc/: db.md  架构设计.md  详细页设计.md
include/: check_manager.h  self_check_manager.h
include/client/: http_client.h  mqtt_client.h  mysql_client.h  rabbitmq_client.h  redis_client.h
include/db/: db_row.h  db_table.h  migration.h
include/device/: charge_pipe_device.h  device_manager.h  device_object.h  device_repo.h  pile_device.h  pile_object.h
include/model/: device_model.h  history_model.h  pile_model.h
include/ui/: self_check_controller.h
include/utils/: convert.h  log_init.h  self_check_result.h
include/watcher/: online_status_watcher.h
qml/: Main.qml  qtquickcontrols2.conf
qml/card/: DeviceCard.qml  PileCard.qml
qml/components/: CCUDetail.qml  ChargingPileCard.qml  DeviceCard.qml  IPTextField.qml  NetworkConfigPane.qml  OperationButtonGroup.qml  StatusBar.qml  StatusRow.qml
qml/page/: Detial.qml  HistoryPage.qml  Home.qml
qml/style/: AppFont.qml  AppLayout.qml  AppTheme.qml
src/: check_manager.cpp  main.cpp  self_check_manager.cpp
src/client/: http_client.cpp  mqtt_client.cpp  mysql_client.cpp  rabbitmq_client.cpp  redis_client.cpp
src/db/: db_row.cpp  db_table.cpp  migration.cpp
src/device/: charge_pipe_device.cpp  device_manager.cpp  device_repo.cpp  pile_deivce.cpp
src/http/: http_client.cpp  http_client.h
src/model/: device_model.cpp  history_model.cpp  pile_model.cpp
src/ui/: self_check_controller.cpp
src/watcher/: online_status_watcher.cpp
